# syspad_monitor

./: .gitignore  Dockerfile  README.md  setup.cfg  setup.py
conf/: general_params.ini  label_positions.json  mean_positions.csv  syspad_monitor.conf  withings.yml
outputs/: alarm_tracking.xml
sandbox/: indicator.py  indicator_new.py  indicator_new_2.py  items.py  name.py  score.py  simulator.py
syspad_monitor/: __init__.py  __main__.py  database.py  database_encry.py
syspad_monitor/model/: estimator.pickle  feature_extractor.py  fingerPrinting.py  items.py  oauth_api.py  score.py
syspad_monitor/task/: __init__.py  alarmSender.py  bedMonitor.py  dataCollector.py  dataProcessing.py  deviceMonitor.py  obsTransmitter.py  scorePredictor.py  tokensUpdater.py
