[metadata]
name = syspad_monitor
description = SysPAD Sensors Monitoring service
long_description = file: README.md
version = 1.4.3
author = Julien Dupuy
author_email = julien.dupuy@rtech.fr
url = https://gitlab.rtech.fr/computes-manager/runners
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7

[bdist_wheel]
universal = 1

[options]
install_requires =
    configargparse==1.2.3
    flask==2.0.0
    pytz==2020.1
    arrow
    pandas
    requests
    pyfcm
    scikit-learn
packages = find:
include_package_data = True
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    syspad_monitor = syspad_monitor.__main__:main

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    setuptools>=40.8.0

[pep8]
max-line-length = 99

[pylama]
format = pylint
linters = pylint,mccabe
ignore = W1203

[pylama:pycodestyle]
max_line_length = 99

[pylama:pylint]
